# stag

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  stag.1.ronn  stag.5.ronn  stag.fish
include/: ArgParser.hpp  BinaryView.hpp  Callbacks.hpp  Filesystem.hpp  Logging.hpp  common.hpp  info.hpp  util.hpp
include/Commands/: Base.hpp  Fix.hpp  Import.hpp  MetaTag.hpp  Open.hpp  Query.hpp  TagFiles.hpp  Views.hpp
include/Errors/: Abbreviation.hpp  ArgParse.hpp  Base.hpp  Basic.hpp  Commands.hpp  OS.hpp  Tags.hpp  Viewspec.hpp
include/Filesystem/: FilesSet.hpp
include/Logic/: AllDirectory.hpp  TagDirectory.hpp  TagIterator.hpp  TagsIterator.hpp  TagsSet.hpp  UUID.hpp
include/View/: Parser.hpp  View.hpp  Viewspec.hpp  ViewspecImpl.hpp
lib/: cryptopp.cmake  magic_enum.cmake  openmp.cmake  pegtl.cmake  spdlog.cmake
src/: ArgParser.cpp  Callbacks.cpp  Filesystem.cpp  Logging.cpp  info.cpp  main.cpp
src/Commands/: Fix.cpp  Import.cpp  MetaTag.cpp  Open.cpp  Query.cpp  TagFiles.cpp  Views.cpp
src/Errors/: Abbreviation.cpp  ArgParse.cpp  Basic.cpp  Commands.cpp  OS.cpp  Tags.cpp  Viewspec.cpp
src/Filesystem/: FilesSet.cpp
src/Logic/: AllDirectory.cpp  TagDirectory.cpp  TagIterator.cpp  TagsIterator.cpp  TagsSet.cpp  UUID.cpp
src/View/: Parser.cpp  View.cpp  ViewspecImpl.cpp
